--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -8,7 +8,7 @@
         <h1>An error occurred</h1>
         <h2><?= $this->message ?></h2>
 
-        <?php if ('development' == APPLICATION_ENV): ?>
+        <?php if ('development' == APPLICATION_ENV && isset($this->exception)): ?>
 
         <h3>Exception information:</h3>
         <p>
