--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,6 +1,10 @@
 <h2>Index Action</h2>
-Doctrine User:
-<pre><?var_dump($this->user->toArray())?></pre>
 
-Doctrine Form created from User model:<br />
-<?=$this->form;
+<h3>PHPIDS plugin test</h3>
+<a href="<?=$this->baseUrl()?>/index/badrequest">bad request</a>
+
+<h3>Doctrine ModelForm Test</h3>
+<a href="<?=$this->baseUrl()?>/index/form">show form</a>
+
+<h3>Doctrine Action Helper and View Helper Test</h3>
+<a href="<?=$this->baseUrl()?>/index/helpers">test helpers</a>
