Fixed module autoloader, auth login form

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -28,6 +28,6 @@ header("Content-Type: text/html; charset=utf-8");
             <?php echo $this->layout()->content ?>
         </div>
 
-        <div id="footer">Patchwork</div>
+        <div id="footer">Patchwork <?=Patchwork::VERSION?></div>
     </body>
 </html>
