--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -8,3 +8,6 @@
 
 <h3>Doctrine Action Helper and View Helper Test</h3>
 <a href="<?=$this->baseUrl()?>/index/helpers">test helpers</a>
+
+<h3>Authentication</h3>
+<a href="<?=$this->baseUrl()?>/auth">Login</a>
