--- a/application/views/scripts/auth/welcome.phtml
+++ b/application/views/scripts/auth/welcome.phtml
@@ -1,3 +1,3 @@
 <h1>Welcome</h1>
 <?php
-echo $this->renderModel(Zend_Auth::getInstance()->getIdentity(), 'dump');
+echo $this->renderModel(User::getAuthenticatedUser(), 'dump');
