--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -1,20 +1,16 @@
-<?php
-$baseUrl = Zend_Controller_Front::getInstance()->getBaseUrl(false, true);
-header("Content-Type: text/html; charset=utf-8");
-?>
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Patchwork</title>
-        <link rel="shortcut icon" href="<?=$baseUrl?>/images/favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="<?=$baseUrl?>/css/screen.css" />
+        <link rel="shortcut icon" href="<?=$this->baseUrl()?>/images/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="<?=$this->baseUrl()?>/css/screen.css" />
         <?php
         echo $this->headScript()
         //->appendFile($baseUrl.'/js/jquery-1.3.2.min.js','text/javascript')
         ;
         ?>
-        <script type="text/javascript">var base_url = '<?=$baseUrl?>';</script>
+        <script type="text/javascript">var base_url = '<?=$this->baseUrl()?>';</script>
     </head>
     <body class="two-col bp">
         <h1>Patchwork</h1>
