--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -3,27 +3,30 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Patchwork</title>
-        <link rel="shortcut icon" href="<?=$this->baseUrl()?>/images/favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="<?=$this->baseUrl()?>/css/screen.css" />
+        <link rel="shortcut icon" href="<?= $this->baseUrl() ?>/images/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="<?= $this->baseUrl() ?>/css/screen.css" />
         <?php
         echo $this->headScript()
         //->appendFile($baseUrl.'/js/jquery-1.3.2.min.js','text/javascript')
         ;
         ?>
-        <script type="text/javascript">var base_url = '<?=$this->baseUrl()?>';</script>
+        <script type="text/javascript">var base_url = '<?= $this->baseUrl() ?>';</script>
     </head>
-    <body class="two-col bp">
-        <h1>Patchwork</h1>
-        <?php echo $this->navigation()->menu()->render() ?>
+    <body class="bp">
+
         <div id="container">
-            <div class="breadcrumbs">
-            <?php
-            echo $this->navigation()->breadcrumbs()->render();
-            ?>
+            <div id="header"><h1>Patchwork</h1></div>
+            <div id="sidebar">
+                <h3>Navigation</h3>
+                <?php
+                echo $this->navigation()->breadcrumbs()->render();
+                ?>
             </div>
-            <?php echo $this->layout()->content ?>
+            <div id="content">
+                <?php echo $this->layout()->content ?>
+            </div>
+            <div id="footer">Patchwork <?= Patchwork::VERSION ?></div>
         </div>
 
-        <div id="footer">Patchwork <?=Patchwork::VERSION?></div>
     </body>
 </html>
