--- a/public/css/print.css
+++ b/public/css/print.css
@@ -1,16 +1,11 @@
-/* line 7, ../../scss/print.scss */
 body.bp {
   line-height: 1.5;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
   color: black;
   background: none;
-  font-size: 10pt;
-}
-/* line 52, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  font-size: 10pt; }
 body.bp .container {
-  background: none;
-}
-/* line 54, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  background: none; }
 body.bp hr {
   background: #cccccc;
   color: #cccccc;
@@ -18,56 +13,33 @@ body.bp hr {
   height: 2px;
   margin: 2em 0;
   padding: 0;
-  border: none;
-}
-/* line 62, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  border: none; }
 body.bp hr.space {
   background: white;
-  color: white;
-}
-/* line 65, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  color: white; }
 body.bp h1, body.bp h2, body.bp h3, body.bp h4, body.bp h5, body.bp h6 {
-  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
-}
-/* line 67, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  font-family: "Helvetica Neue", Arial, Helvetica, sans-serif; }
 body.bp code {
   font-size: 0.9em;
-  font-family: "andale mono", "lucida console", monospace;
-}
-/* line 72, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  font-family: "andale mono", "lucida console", monospace; }
 body.bp a img {
-  border: none;
-}
-/* line 75, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  border: none; }
 body.bp a:link, body.bp a:visited {
   background: transparent;
   font-weight: 700;
-  text-decoration: underline;
-}
-/* line 79, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  text-decoration: underline; }
 body.bp p img.top {
-  margin-top: 0;
-}
-/* line 81, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  margin-top: 0; }
 body.bp blockquote {
   margin: 1.5em;
   padding: 1em;
   font-style: italic;
-  font-size: 0.9em;
-}
-/* line 86, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  font-size: 0.9em; }
 body.bp .small {
-  font-size: 0.9em;
-}
-/* line 88, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  font-size: 0.9em; }
 body.bp .large {
-  font-size: 1.1em;
-}
-/* line 90, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  font-size: 1.1em; }
 body.bp .quiet {
-  color: #999999;
-}
-/* line 92, ../../../../.gem/ruby/1.8/gems/compass-0.10.2/frameworks/blueprint/stylesheets/blueprint/_print.scss */
+  color: #999999; }
 body.bp .hide {
-  display: none;
-}
+  display: none; }
