--- a/scss/screen.scss
+++ b/scss/screen.scss
@@ -1,55 +1,40 @@
-// This import applies a global reset to any page that imports this stylesheet.
-@import "blueprint/reset";
-
-// To configure blueprint, edit the partials/base.sass file.
-@import "partials/base";
-
-// Import all the default blueprint modules so that we can access their mixins.
 @import "blueprint";
-
+@import "blueprint/reset";
 @import "blueprint/typography";
 @import "blueprint/colors";
+@import "blueprint/grid";
 
-// Import the non-default scaffolding module.
-@import "blueprint/scaffolding";
+$blueprint-grid-columns: 24;
+$blueprint_grid_width: 30px;
 
-// To generate css equivalent to the blueprint css but with your
-// configuration applied, uncomment:
-//@include blueprint
+// Use this to calculate the width based on the total width.
+// Or you can set !blueprint_grid_width to a fixed value and unset !blueprint_container_size -- it will be calculated for you.
+$blueprint-grid-width: ($blueprint-container-size + $blueprint-grid-margin) / $blueprint-grid-columns - $blueprint-grid-margin;
 
-// But Compass recommends that you scope your blueprint styles
-// So that you can better control what pages use blueprint
-// when stylesheets are concatenated together.
-@include blueprint-scaffolding("body.bp");
-
-body.bp {
-  @include blueprint-typography(true);
-  @include blueprint-utilities;
-  @include blueprint-debug;
-  @include blueprint-interaction;
-  // Remove the scaffolding when you're ready to start doing visual design.
-  // Or leave it in if you're happy with how blueprint looks out-of-the-box
+body {
+    @include blueprint-reset;
+    @include blueprint-typography-body;
 }
 
 form {
-  @include blueprint-form;
-  background-color: $success_bg_color;
+    @include blueprint-form;
 }
 
+#container {
+    @include container;
 
-// Page layout can be done using mixins applied to your semantic classes and IDs:
-body.two-col {
-  #container {
-    @include container; }
-  #header, #footer {
-    @include column($blueprint-grid-columns); }
-  #sidebar {
-    // One third of the grid columns, rounding down. With 24 cols, this is 8.
-    $sidebar-columns: floor($blueprint-grid-columns / 3);
-    @include column($sidebar-columns); }
-  #content {
-    // Two thirds of the grid columns, rounding up.
-    // With 24 cols, this is 16.
-    $content-columns: ceil(2 * $blueprint-grid-columns / 3);
-    // true means it's the last column in the row
-    @include column($content-columns, true); } }
+    #sidebar {
+        background-color: $blueprint-table-header-color;
+        @include column(6);
+    }
+
+    #content {
+        @include column(18, true);
+    }
+
+    #header, #footer {
+        @include column(24);
+        background-color: $blueprint-table-header-color;
+        padding: $blueprint-grid-margin;
+    }
+}
