--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -17,9 +17,8 @@
         <div id="container">
             <div id="header"><h1>Patchwork</h1></div>
             <div id="sidebar">
-                <h3>Navigation</h3>
                 <?php
-                echo $this->navigation()->breadcrumbs()->render();
+                echo $this->navigation()->menu();
                 ?>
             </div>
             <div id="content">
