--- a/public/css/screen.css
+++ b/public/css/screen.css
@@ -110,6 +110,8 @@ form input.text, form input.title, form input[type=text], form input[type=passwo
 form textarea {
   width: 390px;
   height: 250px; }
+form table td {
+  padding: 5px; }
 
 #container {
   width: 950px;
@@ -126,6 +128,9 @@ form textarea {
   width: 230px; }
 * html #container #sidebar {
   overflow-x: hidden; }
+#container #sidebar ul {
+  padding: 10px;
+  list-style: none; }
 #container #content {
   display: inline;
   float: left;
@@ -137,10 +142,18 @@ form textarea {
   display: inline;
   float: left;
   margin-right: 10px;
-  width: 950px; }
+  width: 950px;
+  background-color: #c3d9ff;
+  padding: 10px; }
 * html #container #header, * html #container #footer {
   overflow-x: hidden; }
 
-#header, #footer {
-  background-color: #c3d9ff;
-  padding: 10px; }
+.notice {
+  padding: 0.8em;
+  margin-bottom: 1em;
+  border: 2px solid #dddddd;
+  background: #fff6bf;
+  color: #514721;
+  border-color: #ffd324; }
+.notice a {
+  color: #514721; }
