--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -3,14 +3,14 @@
     <head>
         <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
         <title>Patchwork</title>
-        <link rel="shortcut icon" href="<?= $this->baseUrl() ?>/images/favicon.ico" type="image/x-icon" />
-        <link rel="stylesheet" type="text/css" href="<?= $this->baseUrl() ?>/css/screen.css" />
+        <link rel="shortcut icon" href="/images/favicon.ico" type="image/x-icon" />
+        <link rel="stylesheet" type="text/css" href="/css/screen.css" />
         <?php
         echo $this->headScript()
         //->appendFile($baseUrl.'/js/jquery-1.3.2.min.js','text/javascript')
         ;
         ?>
-        <script type="text/javascript">var base_url = '<?= $this->baseUrl() ?>';</script>
+        <script type="text/javascript">var base_url = '<?php echo $this->baseUrl() ?>';</script>
     </head>
     <body class="bp">
 
@@ -24,7 +24,7 @@
             <div id="content">
                 <?php echo $this->layout()->content ?>
             </div>
-            <div id="footer">Patchwork <?= Patchwork::VERSION ?></div>
+            <div id="footer">Patchwork <?php echo Patchwork::VERSION ?></div>
         </div>
 
     </body>
