--- a/application/views/scripts/error/error.phtml
+++ b/application/views/scripts/error/error.phtml
@@ -6,17 +6,17 @@
     </head>
     <body>
         <h1>An error occurred</h1>
-        <h2><?= $this->message ?></h2>
+        <h2><?php echo $this->message ?></h2>
 
         <?php if (isset($this->exception)): ?>
 
         <h3>Exception information:</h3>
         <p>
-            <b>Message:</b> <?= $this->exception->getMessage() ?>
+            <b>Message:</b> <?php echo $this->exception->getMessage() ?>
         </p>
 
         <h3>Stack trace:</h3>
-        <pre><?= $this->exception->getTraceAsString() ?>
+        <pre><?php echo $this->exception->getTraceAsString() ?>
         </pre>
 
         <h3>Request Parameters:</h3>
