Modified messages view helper and layout

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -22,6 +22,7 @@
                 ?>
             </div>
             <div id="content">
+                <?php echo $this->Messages(); ?>
                 <?php echo $this->layout()->content ?>
             </div>
             <div id="footer">Patchwork <?php echo Patchwork::VERSION ?></div>
