Fixed app and tests to work with zfdoctrine

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -25,7 +25,7 @@
                 <?php echo $this->Messages(); ?>
                 <?php echo $this->layout()->content ?>
             </div>
-            <div id="footer">Patchwork <?php echo Patchwork::VERSION ?></div>
+            <div id="footer">Patchwork</div>
         </div>
 
     </body>
