Removed howto module, changed files to use zfdoctrine

--- a/application/views/models/user_dump.phtml
+++ b/application/views/models/user_dump.phtml
@@ -1,14 +1,14 @@
 <table>
     <tr>
         <td>Name</td>
-        <td><?=$this->User->firstname .' '.$this->User->lastname?></td>
+        <td><?php echo $this->User->firstname .' '.$this->User->lastname?></td>
     </tr>
     <tr>
         <td>Email</td>
-        <td><?=$this->User->email?></td>
+        <td><?php echo $this->User->email?></td>
     </tr>
     <tr>
         <td>Locale</td>
-        <td><?=$this->User->language?></td>
+        <td><?php echo $this->User->language?></td>
     </tr>
 </table>
