--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,13 +1,13 @@
 <h2>Index Action</h2>
 
 <h3>PHPIDS plugin test</h3>
-<a href="<?=$this->baseUrl()?>/index/badrequest">bad request</a>
+<a href="<?php echo $this->baseUrl()?>/index/badrequest">bad request</a>
 
 <h3>Doctrine ModelForm Test</h3>
-<a href="<?=$this->baseUrl()?>/index/form">show form</a>
+<a href="<?php echo $this->baseUrl()?>/index/form">show form</a>
 
 <h3>Doctrine Action Helper and View Helper Test</h3>
-<a href="<?=$this->baseUrl()?>/index/helpers">test helpers</a>
+<a href="<?php echo $this->baseUrl()?>/index/helpers">test helpers</a>
 
 <h3>Authentication</h3>
-<a href="<?=$this->baseUrl()?>/auth">Login</a>
+<a href="<?php echo $this->baseUrl()?>/auth">Login</a>
