Changed auth form to use ini file

--- a/application/views/scripts/auth/login.phtml
+++ b/application/views/scripts/auth/login.phtml
@@ -5,7 +5,6 @@
         echo $this->translate($m);
     ?>
 </div>
-<?php endif;?>
+<?php endif;
 
-<?php
-echo $this->form;
+echo $this->form->render();
