--- a/application/views/scripts/index/index.phtml
+++ b/application/views/scripts/index/index.phtml
@@ -1,13 +1,43 @@
-<h2>Index Action</h2>
+<style>
+    a:link,
+    a:visited
+    {
+        color: #0398CA;
+    }
 
-<h3>PHPIDS plugin test</h3>
-<a href="<?php echo $this->baseUrl()?>/index/badrequest">bad request</a>
+    span#zf-name
+    {
+        color: #91BE3F;
+    }
 
-<h3>Doctrine ModelForm Test</h3>
-<a href="<?php echo $this->baseUrl()?>/index/form">show form</a>
+    div#welcome
+    {
+        color: #FFFFFF;
+        background-image: url(http://framework.zend.com/images/bkg_header.jpg);
+        width:  600px;
+        height: 400px;
+        border: 2px solid #444444;
+        overflow: hidden;
+        text-align: center;
+    }
 
-<h3>Doctrine Action Helper and View Helper Test</h3>
-<a href="<?php echo $this->baseUrl()?>/index/helpers">test helpers</a>
+    div#more-information
+    {
+        background-image: url(http://framework.zend.com/images/bkg_body-bottom.gif);
+        height: 100%;
+    }
+</style>
+<div id="welcome">
+    <h1>Welcome to the <span id="zf-name">Zend Framework!</span></h1>
 
-<h3>Authentication</h3>
-<a href="<?php echo $this->baseUrl()?>/auth">Login</a>
+    <h3>This is your project's main page</h3>
+
+    <div id="more-information">
+        <p><img src="http://framework.zend.com/images/PoweredBy_ZF_4LightBG.png" /></p>
+        <p>
+            Helpful Links: <br />
+            <a href="http://framework.zend.com/">Zend Framework Website</a> |
+            <a href="http://framework.zend.com/manual/en/">Zend Framework Manual</a>
+        </p>
+    </div>
+</div>
