Major refactoring to work with zf and zfdoctrine

--- a/application/layouts/scripts/layout.phtml
+++ b/application/layouts/scripts/layout.phtml
@@ -12,8 +12,7 @@
         ?>
         <script type="text/javascript">var base_url = '<?php echo $this->baseUrl() ?>';</script>
     </head>
-    <body class="bp">
-
+    <body>
         <div id="container">
             <div id="header"><h1>Patchwork</h1></div>
             <div id="sidebar">
